# Hubify

./: README.md  index.html  package-lock.json  package.json  project.md
server/: index.js  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  choco.rs  db.rs  diskmap.rs  everything.rs  guardian.rs  hw_control.rs  icon.rs  indexer.rs  job.rs  keybinds.rs  lib.rs  main.rs  network.rs  ntfs_test.rs  process.rs  scoop.rs  setup.rs  store.rs  uninstaller.rs  updater.rs  winget.rs
src/assets/fonts/: fonts.css
src/components/: AddAppDialog.css  AddAppDialog.tsx  AppCard.css  AppCard.tsx  AppDetail.css  AppDetail.tsx  ContextMenu.css  ContextMenu.tsx  Sidebar.css  Sidebar.tsx  ThemeEngine.tsx  Titlebar.css  Titlebar.tsx  UpdateModal.css  UpdateModal.tsx
src/hooks/: useApps.ts  useApps.tsx  useGlobalSearchFocus.ts
src/pages/: Analytics.css  Analytics.tsx  FirstRun.css  FirstRun.tsx  GuardianPopup.css  GuardianPopup.tsx  Home.css  Home.tsx  Library.css  Library.tsx  Page.css  Settings.css  Settings.tsx  Store.css  Store.tsx  Sync.css  Sync.tsx  Tools.css  Tools.tsx  Tray.css  Tray.tsx
src/styles/: global.css  themes.css
src/utils/: keyboard.ts
