[package]
name = "hubify"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "hubify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sysinfo = { version = "0.33", default-features = false, features = ["system", "network"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
shell-words = "1.1"
ntfs = "0.4.0"
jwalk = "0.8.1"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_Controls",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Storage_FileSystem",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_System_Registry",
  "Win32_Security",
  "Win32_Devices_Display"
] }
winreg = "0.52"

